Fixed linebreaks, added whitespace after \underl and fixed some mistakes in blackcards in basic

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -33,42 +33,41 @@
 
 \whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
 \whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
-
 \whitecard{Basis}{Benutzte\newline Unterhosen.}%
+
 \whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
 \whitecard{Basis}{Bienen?}%
-
 \whitecard{Basis}{Bill Nye,\newline dieser Wissenschafts-Heini.}%
+
 \whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}%
 \whitecard{Basis}{Burschen ohne Ärsche.}%
-
 \whitecard{Basis}{Dunkle und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
+
 \whitecard{Basis}{Das Ende der Straße.}%
 \whitecard{Basis}{Das Herz eines Kindes.}%
-
 \whitecard{Basis}{Das Leben eines Piraten.}%
+
 \whitecard{Basis}{Das letzte noch lebende Bison essen.}%
 \whitecard{Basis}{Das Licht einer Milliarde\newline Sonnen.}%
-
 \whitecard{Basis}{Das\newline schwedische\newline Tempur-Pedic\SymbReg \newline  Schlafsystem.}%
+
 \whitecard{Basis}{Das Richtige tun.}%
 \whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
-
 \whitecard{Basis}{Das Wunder der Geburt.}%
+
 \whitecard{Basis}{Ein\newline merkwürdiger\newline Bruder.}%
 \whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
-
 \whitecard{Basis}{Der Geruch alter Leute.}%
+
 \whitecard{Basis}{Der Milchmann.}%
 \whitecard{Basis}{Der\newline amerikanische\newline Traum.}%
-
 \whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
-\whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
 
+\whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
 \whitecard{Basis}{Der Rhythmus Afrikas.}%
 \whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
-\whitecard{Basis}{Die Hosen\newline runterlassen.}%
 
+\whitecard{Basis}{Die Hosen\newline runterlassen.}%
 \whitecard{Basis}{Die Kunst der Verführung.}%
 \whitecard{Basis}{Die Leiden einer Frau.}%
 
@@ -88,71 +87,71 @@
 \whitecard{Basis}{Ein Arschloch zu Kindern sein.}%
 \whitecard{Basis}{Ein Arsch mit Ohren sein.}%
 
-\whitecard{Basis}{Ein bisschen\newline Ruhe und\newline Frieden, verdammt nochmal.}%
+\whitecard{Basis}{Ein bisschen\newline Ruhe und\newline Frieden,\newline verdammt\newline nochmal.}%
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
 \whitecard{Basis}{Eine Backpfeife.}%
 
 \whitecard{Basis}{Eine Billiarde Euro.}%
 \whitecard{Basis}{Eine Eishacken-Lobotomie.}%
 \whitecard{Basis}{Eine hässliche Fresse.}%
-\whitecard{Basis}{Ein Ei legen.}%
 
+\whitecard{Basis}{Ein Ei legen.}%
 \whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
 \whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}%
-\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
 
+\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
 \whitecard{Basis}{Eine\newline asymmetrische Brust-vergößerung.}%
 \whitecard{Basis}{Eine\newline enttäuschende Geburtstags-\newline party.}%
-\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 
+\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
 \whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}%
 \whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}%
-\whitecard{Basis}{Einen\newline Kronleuchter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 
+\whitecard{Basis}{Einen\newline Kronleuchter\newline auf seine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
 \whitecard{Basis}{Einen Schmollmund machen.}%
 \whitecard{Basis}{Eine salzige Überraschung.}%
-\whitecard{Basis}{Eine Spur aus\newline Tränen}%
 
+\whitecard{Basis}{Eine Spur aus\newline Tränen}%
 \whitecard{Basis}{Einfach\newline großartig\newline sein.}%
 \whitecard{Basis}{Ein Falke mit\newline einer Mütze\newline auf dem Kopf.}%
-\whitecard{Basis}{Ein Gehirntumor.}%
 
+\whitecard{Basis}{Ein Gehirntumor.}%
 \whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
 \whitecard{Basis}{Ein Glassdach.}%
-\whitecard{Basis}{Ein kleines Pferd.}%
 
+\whitecard{Basis}{Ein kleines Pferd.}%
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
 \whitecard{Basis}{Ein M16\newline Sturmgewehr.}%
-\whitecard{Basis}{Einmal richtig dran\newline schnuppern.}%
 
+\whitecard{Basis}{Einmal richtig dran\newline schnuppern.}%
 \whitecard{Basis}{Ein Mann\newline mittleren\newline Alters in\newline Rollschuhen.}%
 \whitecard{Basis}{Ein Nerd-Spasti.}%
-\whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}%
 
+\whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}%
 \whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}%
 \whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}%
-\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzinfarkt hat.}%
 
+\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzinfarkt hat.}%
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
 \whitecard{Basis}{Ein rauchender Affe.}%
-\whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
 
+\whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
 \whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
 \whitecard{Basis}{Ein schmutziges Mundwerk.}%
-\whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
 
+\whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
 \whitecard{Basis}{Ein törichter Mord.}%
 \whitecard{Basis}{Ein trübseliger Zoo-Löwe.}%
-\whitecard{Basis}{Ein übergroßer Lolli.}%
 
+\whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Ein verirrtes Schamhaar.}%
 \whitecard{Basis}{Ein wirklich\newline cooler Hut.}%
-\whitecard{Basis}{Ein Würstchen-Fest.}%
 
+\whitecard{Basis}{Ein Würstchen-Fest.}%
 \whitecard{Basis}{Embrionale Stammzellen.}%
 \whitecard{Basis}{Emotionen.}%
-\whitecard{Basis}{Erdrückende Schulden.}%
 
+\whitecard{Basis}{Erdrückende Schulden.}%
 \whitecard{Basis}{Essbare\newline Unterwäsche.}%
 \whitecard{Basis}{Explosionen.}%
 
@@ -166,74 +165,73 @@
 
 \whitecard{Basis}{Frauen in Joghurt-Werbespots.}%
 \whitecard{Basis}{Friendly Fire.}%
-
 \whitecard{Basis}{Frohlocken.}%
+
 \whitecard{Basis}{Funkig-frische Rhythmen.}%
 \whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}%
-
 \whitecard{Basis}{Gänse.}%
+
 \whitecard{Basis}{Geister.}%
 \whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}%
-
 \whitecard{Basis}{Genetisch\newline manipulierte\newline Kampf-Schildkröten mit Säure-Atem.}%
+
 \whitecard{Basis}{Gerichtlich\newline angeordneter \newline Entzug.}%
 \whitecard{Basis}{Gestaltwandler.}%
-
 \whitecard{Basis}{Glänzende\newline Dinge.}%
+
 \whitecard{Basis}{Gleich-\newline geschlechtlicher\newline Eiskunstlauf.}%
 \whitecard{Basis}{Goblins.}%
-
 \whitecard{Basis}{Grabrauben.}%
+
 \whitecard{Basis}{Großmutter.}%
 \whitecard{Basis}{Halb nackt\newline auf einem\newline McDonalds-\newline Parkplatz\newline aufwachen.}%
-
 \whitecard{Basis}{Hefe.}%
+
 \whitecard{Basis}{Heiraten, ein\newline paar Kinder\newline haben, ein\newline bisschen Kram\newline kaufen, sich dann\newline zur Ruhe setzen\newline und sterben.}%
 \whitecard{Basis}{Heiße\newline Menschen.}%
-
 \whitecard{Basis}{Heißer Käse.}%
+
 \whitecard{Basis}{Herpes.}%
 \whitecard{Basis}{Herz-\newline erweichende\newline Weisenkinder.}%
-
 \whitecard{Basis}{Hetero-\newline normativität.}%
+
 \whitecard{Basis}{Hip-Hop\newline Juwelen.}%
 \whitecard{Basis}{Hippiemusik.}%
-
 \whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Homosexueller\newline Lebensstil.}%
 
+\whitecard{Basis}{Homosexueller\newline Lebensstil.}%
 \whitecard{Basis}{Hormon-Injektionen.}%
 \whitecard{Basis}{``Ich liebe dich''\newline sagen.}%
-\whitecard{Basis}{In Flammen \newline stehen.}%
 
+\whitecard{Basis}{In Flammen \newline stehen.}%
 \whitecard{Basis}{In Problemen ertrinken.}%
 \whitecard{Basis}{Kamikaze-Kissen.}%
-\whitecard{Basis}{Keine Hosen\newline tragen.}%
 
+\whitecard{Basis}{Keine Hosen\newline tragen.}%
 \whitecard{Basis}{Kettensäge für die Hände.}%
 \whitecard{Basis}{Kiefersperre.}%
-\whitecard{Basis}{Kinder an\newline Leinen.}%
 
+\whitecard{Basis}{Kinder an\newline Leinen.}%
 \whitecard{Basis}{Kinder-Schönheits-\newline wettbewerbe.}%
 \whitecard{Basis}{Kostenlose Proben.}%
-\whitecard{Basis}{Kräftige\newline Oberschenkel.}%
 
+\whitecard{Basis}{Kräftige\newline Oberschenkel.}%
 \whitecard{Basis}{Krankenpfleger.}%
 \whitecard{Basis}{Krankhaft\newline Fettleibige.}%
-\whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
 
+\whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
 \whitecard{Basis}{Kuscheln.}%
 \whitecard{Basis}{Kybernetische Verbesserungen.}%
-\whitecard{Basis}{Landminen.}%
 
+\whitecard{Basis}{Landminen.}%
 \whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}%
 \whitecard{Basis}{Männer.}%
-\whitecard{Basis}{Mehrfache Stichwunden.}%
 
+\whitecard{Basis}{Mehrfache Stichwunden.}%
 \whitecard{Basis}{Mein Beziehungs-\newline status.}%
 \whitecard{Basis}{Meine inneren Dämonen.}%
-\whitecard{Basis}{Meine\newline Genitalien.}%
 
+\whitecard{Basis}{Meine\newline Genitalien.}%
 \whitecard{Basis}{Meine Warzen.}%
 \whitecard{Basis}{Mein schwarzer Hintern.}%
 
@@ -267,123 +265,123 @@
 
 \whitecard{Basis}{Schlampen.}%
 \whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}%
-
 \whitecard{Basis}{Schreckliche\newline Laser-Haar-\newline Entfernungs-\newline Unfälle.}%
+
 \whitecard{Basis}{Schwarze.}%
 \whitecard{Basis}{Schwule.}%
-
 \whitecard{Basis}{Sein Shirt\newline ausziehen.}%
+
 \whitecard{Basis}{Selbsthass.}%
 \whitecard{Basis}{Selbstjustiz.}%
-
 \whitecard{Basis}{Sich alleine\newline betrinken.}%
+
 \whitecard{Basis}{Sich ein paar\newline Eier wachsen lassen.}%
 \whitecard{Basis}{Snobismus.}%
-
 \whitecard{Basis}{Sonnenschein und\newline Regenbögen.}%
-\whitecard{Basis}{So zu tun, als ob es einen interessieren würde.}%
-\whitecard{Basis}{Spektakuläre Bauchmuskeln.}%
 
+\whitecard{Basis}{So zu tun, als ob\newline es einen\newline interessieren\newline würde.}%
+\whitecard{Basis}{Spektakuläre Bauchmuskeln.}%
 \whitecard{Basis}{Spießer.}%
+
 \whitecard{Basis}{Spontane Selbstentzündung.}%
 \whitecard{Basis}{Sterben.}%
-
 \whitecard{Basis}{Stille.}%
+
 \whitecard{Basis}{Suppe, die zu heiß ist.}%
 \whitecard{Basis}{Süße, süße\newline Rache.}%
-
 \whitecard{Basis}{Swooping.}%
+
 \whitecard{Basis}{Tänzeln.}%
 \whitecard{Basis}{Teenager Schwangerschaft.}%
-
 \whitecard{Basis}{Thermodynamik.}%
+
 \whitecard{Basis}{Thermonucleare Detonation.}%
 \whitecard{Basis}{U-Bahn.}%
-
 \whitecard{Basis}{Überkompen-\newline sation.}%
+
 \whitecard{Basis}{Unangemes-\newline senes Jodeln.}%
 \whitecard{Basis}{Unfassbare Blödheit.}%
-
 \whitecard{Basis}{Unterdrückung.}%
+
 \whitecard{Basis}{Vaterkomplexe.}%
 \whitecard{Basis}{Velociraptor\newline Angriffe.}%
-
 \whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}%
+
 \whitecard{Basis}{Welpen!}%
 \whitecard{Basis}{Wissenschaft.}%
-
 \whitecard{Basis}{Würgen.}%
+
 \whitecard{Basis}{Zeit für mich.}%
 \whitecard{Basis}{Zentauren.}%
-
 \whitecard{Basis}{Zuhälter.}%
+
 \whitecard{Basis}{110\% geben}%
 \whitecard{Basis}{Rassisitisch voreingenommene Einstellungstests.}%
-
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
+
 \blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}%
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
-
 \blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine\newline Hausaufgaben\newline aufgrund von \underl nicht\newline machen.}%
+
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
 \blackcard{2}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
-\blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{2}{Basis}{In einer Welt verwüstet von \underl, ist \underl dein\newline einziger Trost.}%
 
-\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
+\blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
+\blackcard{2}{Basis}{In einer Welt\newline verwüstet von \newline \underl, ist\newline \underl dein\newline einziger Trost.}%
+\blackcard{2}{Basis}{Ja richtig, ich\newline habe \underl\newline getötet. Willst du\newline wissen wie?}%
+
 \blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
 \blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}%
-
 \blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
+
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
 \blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}%
-
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
-\blackcard{1}{Basis}{\underl. High Five, Bro.}%
-\blackcard{2}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}%
 
+\blackcard{1}{Basis}{\underl. High Five, Bro.}%
+\blackcard{2}{Basis}{\underl ist eine heikle Lage, die zu \underl führt.}%
 \blackcard{1}{Basis}{\underl. So will ich sterben!}%
+
 \blackcard{3}{Basis}{\underl + \underl\newline = \underl.}%
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}%
-
 \blackcard{1}{Basis}{Warum bin ich so klebrig?}%
+
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
-
 \blackcard{1}{Basis}{Was habe ich aus Dänemark mitgebracht?}%
+
 \blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
 \blackcard{1}{Basis}{Was gibt es\newline tonnenweise im\newline Himmel?}%
+\blackcard{1}{Basis}{Was hat meine\newline letzte Beziehung\newline beendet?}%
 
-\blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
 \blackcard{1}{Basis}{Was hat nie\newline verfehlt,\newline eine Party\newline zu beleben?}%
 \blackcard{1}{Basis}{Was hilft Angela\newline Merkel zu\newline entspannen?}%
-
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
+
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
 \blackcard{1}{Basis}{Was ist der beste\newline Freund eines\newline Mädchens?}%
-
 \blackcard{1}{Basis}{Was ist die neue Modediät?}%
+
 \blackcard{1}{Basis}{Was ist meine\newline geheime Kraft?}%
 \blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
-
 \blackcard{1}{Basis}{Was werde ich aus\newline der Zukunft\newline mitbringen, um\newline alle davon zu\newline überzeugen, dass\newline ich ein großartiger\newline Magier bin?}%
+
 \blackcard{1}{Basis}{Was willst du nicht\newline in deinem\newline asiatischen\newline Essen finden?}%
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
+\blackcard{1}{Basis}{Was würde Oma\newline ekelhaft, aber doch\newline seltsam\newline bezaubernd finden?}%
 
-\blackcard{1}{Basis}{Was würde Oma\newline ekelhaft, aber doch\newline seltsam\newline bezaubernd\newline finden?}%
 \blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline wem würde ich eine\newline Statue widmen?}%
 \blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}%
-
 \blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
-\blackcard{1}{Basis}{Wir stellen vor:\newline Xtreme Fußball!\newline Es ist wie\newline normales Fußball,\newline nur mit \underl.}%
-\blackcard{1}{Basis}{Womit wirst du\newline immer deinen\newline Partner\newline beeindrucken\newline können?}%
 
-\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
+\blackcard{1}{Basis}{Wir stellen vor:\newline Xtreme Fußball!\newline Es ist wie\newline normales Fußball,\newline nur mit \underl.}%
+\blackcard{1}{Basis}{Womit wirst du\newline deinen Partner\newline immer\newline beeindrucken\newline können?}%
+\blackcard{1}{Basis}{Ab sofort im\newline Flugzeug\newline verboten: \underl.}%
+
 \blackcard{3}{Basis}{Schreibe einen\newline Haiku:\newline \underl \newline \underl \newline \underl}%
 \blackcard{1}{Basis}{Wie motivieren die\newline Lehrer an\newline Hauptschulen\newline ihre Schüler,\newline zu lernen?}%
-
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
+
 \blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
