--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -19,28 +19,28 @@
 % Please note: All whitespace characters might break this document. Please
 % avoid placing whitespace character that are not intended inside these files.
 %
-\titlecard{Geschichte}
+\titlecard{Geschichte}%
 \whitecard{Geschichte}{Adolf Hitler.}%
 \whitecard{Geschichte}{Anders Breivik.}%
 
 \whitecard{Geschichte}{Historische\newline schwarze\newline Kollegen.}%
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
 \whitecard{Geschichte}{Hurricane\newline Katrina.}%
-\whitecard{Geschichte}{Sklaverei.}%
 
+\whitecard{Geschichte}{Sklaverei.}%
 \whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}%
 \whitecard{Geschichte}{Wikinger.}%
+
 \whitecard{Geschichte}{Zeitreisen\newline Paradox.}%
 \whitecard{Geschichte}{Der Urknall.}%
-
 \whitecard{Geschichte}{Katapulte.}%
+
 \whitecard{Geschichte}{Marcus Iunius Brutus.}%
 \whitecard{Geschichte}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
-
 \whitecard{Geschichte}{Der\newline Übermensch.}%
+
 \whitecard{Geschichte}{In Polen einmarschieren.}%
 \whitecard{Geschichte}{Gandhi.}%
-
 \whitecard{Geschichte}{Martin Luther King.}%
 
 \blackcard{1}{Geschichte}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
