--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -19,7 +19,7 @@
 % Please note: All whitespace characters might break this document. Please
 % avoid placing whitespace character that are not intended inside these files.
 %
-\titlecard{Werbung}
+\titlecard{Werbung}%
 \whitecard{Werbung}{5 Euro Subway Footlongs.}%
 \whitecard{Werbung}{Activia\SymbReg.}%
 
@@ -41,11 +41,11 @@
 
 \whitecard{Werbung}{Whiskas.}%
 \whitecard{Werbung}{All-you-can-eat Shrimps für 4,99 Euro.}%
-
 \blackcard{1}{Werbung}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
+
 \blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
 \blackcard{1}{Werbung}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-
 \blackcard{1}{Werbung}{\underl:\newline Gut bis zum letzten Tropfen.}%
+
 \blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
