No more manual linebreaks

--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -20,22 +20,22 @@
 % avoid placing whitespace character that are not intended inside these files.
 %
 \titlecard{Böse}%
-\whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}%
+\whitecard{Böse}{Abtreibungen mit Kleiderbügeln.}%
 \whitecard{Böse}{AIDS.}%
 
 \whitecard{Böse}{Auschwitz.}%
-\whitecard{Böse}{Auto-\newline kannibalismus.}%
+\whitecard{Böse}{Auto- kannibalismus.}%
 \whitecard{Böse}{Ein Fötus.}%
 
 \whitecard{Böse}{Nekrophilie.}%
-\whitecard{Böse}{Eine Pyramide\newline aus\newline abgetrennten\newline Köpfen.}%
+\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}%
 \whitecard{Böse}{Ein Kühlschrank voller Organe.}%
 
 \whitecard{Böse}{Ein robuster Mongoloider.}%
 \whitecard{Böse}{Hungersnot.}%
 \whitecard{Böse}{Kinder mit Arsch-Krebs.}%
 
-\whitecard{Böse}{Kindes-\newline missbrauch.}%
+\whitecard{Böse}{Kindes- missbrauch.}%
 \whitecard{Böse}{Kreuzigung.}%
 \whitecard{Böse}{Menschenfleisch.}%
 
@@ -44,7 +44,7 @@
 \whitecard{Böse}{Robo-Hitler.}%
 
 \whitecard{Böse}{Schlechte Holocaust-Witze.}%
-\whitecard{Böse}{Schwer-\newline behinderte.}%
+\whitecard{Böse}{Schwer- behinderte.}%
 \whitecard{Böse}{Teile eines toten Anhalters.}%
 
 \whitecard{Böse}{Tote Babys.}%
@@ -56,17 +56,17 @@
 \whitecard{Böse}{Eine Windmühle voller Leichen.}%
 
 \whitecard{Böse}{Sich einen Dreck um die dritte Welt zu scheren.}%
-\whitecard{Böse}{Skalps von\newline weißen\newline Männern.}%
+\whitecard{Böse}{Skalps von weißen Männern.}%
 \whitecard{Böse}{Verlust von Zivilisten.}%
 
 \whitecard{Böse}{Lepra.}%
 \whitecard{Böse}{Seppuku.}%
-\whitecard{Böse}{Ethnische\newline Säuberung.}%
+\whitecard{Böse}{Ethnische Säuberung.}%
 
 \whitecard{Böse}{Kriegsbedingte Amputationen.}%
 \whitecard{Böse}{Die jährliche Massenhinrichtung.}%
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden? \underl.}%
 \blackcard{1}{Böse}{Weiße Menschen wie \underl.}%
