--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -24,9 +24,9 @@
 \whitecard{Drogen}{Amphetamin.}%
 
 \whitecard{Drogen}{Kleber schnüffeln.}%
-\whitecard{Drogen}{Mal so richtig\newline high werden.}%
+\whitecard{Drogen}{Mal so richtig high werden.}%
 \whitecard{Drogen}{Ein Drogendeal.}%
 
 \whitecard{Drogen}{Crystal Meth.}%
-\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
-\blackcard{2}{Drogen}{Als ich einen\newline Acid-Trip hatte,\newline wurde \underl zu\newline \underl.}%
+\blackcard{1}{Drogen}{Was ist meine Anti-Droge?}%
+\blackcard{2}{Drogen}{Als ich einen Acid-Trip hatte, wurde \underl zu \underl.}%
