--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -20,8 +20,8 @@
 % avoid placing whitespace character that are not intended inside these files.
 %
 \titlecard{FSK 16}%
-\whitecard{FSK 16}{50,000 Volt\newline genau in die\newline Nippel.}%
-\whitecard{FSK 16}{Daniel\newline Radcliffes\newline appetitliches Arschloch.}%
+\whitecard{FSK 16}{50,000 Volt genau in die Nippel.}%
+\whitecard{FSK 16}{Daniel Radcliffes appetitliches Arschloch.}%
 
 \whitecard{FSK 16}{Der weibliche Orgasmus.}%
 \whitecard{FSK 16}{Eine erotische schwarze Frau.}%
@@ -29,58 +29,58 @@
 
 \whitecard{FSK 16}{Ein kaputtes Kondom.}%
 \whitecard{FSK 16}{Ein Mikropenis.}%
-\whitecard{FSK 16}{Erektile\newline Dysfunktion.}%
+\whitecard{FSK 16}{Erektile Dysfunktion.}%
 
 \whitecard{FSK 16}{Feuchte Träume.}%
 \whitecard{FSK 16}{Fliegende Sex-Schlangen.}%
-\whitecard{FSK 16}{Erotische Kissen-\newline schlachten.}%
+\whitecard{FSK 16}{Erotische Kissen- schlachten.}%
 
 \whitecard{FSK 16}{``Ihn'' rausholen.}%
 \whitecard{FSK 16}{Klitoris.}%
-\whitecard{FSK 16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}%
+\whitecard{FSK 16}{Lance Armstrongs fehlender Hoden.}%
 
 \whitecard{FSK 16}{Masturbation.}%
 \whitecard{FSK 16}{Meine Vagina.}%
-\whitecard{FSK 16}{Oma nackt\newline sehen.}%
+\whitecard{FSK 16}{Oma nackt sehen.}%
 
 \whitecard{FSK 16}{Penis-Atem.}%
 \whitecard{FSK 16}{Penis-Finger.}%
 \whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel.}%
 
-\whitecard{FSK 16}{Schlechtes\newline Vorspiel.}%
-\whitecard{FSK 16}{So wütend werden, dass man\newline eine Erektion\newline bekommt.}%
-\whitecard{FSK 16}{Stephen Hawkings\newline Sexgespräche.}%
+\whitecard{FSK 16}{Schlechtes Vorspiel.}%
+\whitecard{FSK 16}{So wütend werden, dass man eine Erektion bekommt.}%
+\whitecard{FSK 16}{Stephen Hawkings Sexgespräche.}%
 
-\whitecard{FSK 16}{Ein Mann am Rande des\newline Orgasmus.}%
-\whitecard{FSK 16}{Testikuläre\newline Verdrehung.}%
+\whitecard{FSK 16}{Ein Mann am Rande des Orgasmus.}%
+\whitecard{FSK 16}{Testikuläre Verdrehung.}%
 \whitecard{FSK 16}{Überraschungs Sex!}%
 
 \whitecard{FSK 16}{Vollständige Nacktheit.}%
 \whitecard{FSK 16}{Vorhäute.}%
-\whitecard{FSK 16}{Erotische\newline Harry-Potter\newline Literatur.}%
+\whitecard{FSK 16}{Erotische Harry-Potter Literatur.}%
 
 \whitecard{FSK 16}{Laktation.}%
-\whitecard{FSK 16}{Sexuelle\newline Spannungen.}%
-\whitecard{FSK 16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
+\whitecard{FSK 16}{Sexuelle Spannungen.}%
+\whitecard{FSK 16}{Sich nackt ausziehen und Kika gucken.}%
 
-\whitecard{FSK 16}{Einvernehmlicher Sex.}%
+\whitecard{FSK 16}{Einvernehm-\newline licher Sex.}%
 \whitecard{FSK 16}{Alice Schwarzers Vagina.}%
 \whitecard{FSK 16}{Bilder von Brüsten.}%
 
 \whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}%
 \whitecard{FSK 16}{Eine Erektion verstecken.}%
-\whitecard{FSK 16}{Eregierte\newline Nippel.}%
+\whitecard{FSK 16}{Eregierte Nippel.}%
 
-\whitecard{FSK 16}{Freunde mit\newline gewissen\newline Vorzügen.}%
-\whitecard{FSK 16}{Holzfäller\newline Phantasien.}%
+\whitecard{FSK 16}{Freunde mit gewissen Vorzügen.}%
+\whitecard{FSK 16}{Holzfäller Phantasien.}%
 \whitecard{FSK 16}{Mein Sexleben.}%
 
-\whitecard{FSK 16}{Schenkel-\newline schnorcheln.}%
+\whitecard{FSK 16}{Schenkel- schnorcheln.}%
 \whitecard{FSK 16}{Panda Sex.}%
-\whitecard{FSK 16}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
+\whitecard{FSK 16}{Eine Schildkröte, die einem in den Penis beißt.}%
 
 \blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
 \blackcard{1}{FSK 16}{Ich denke während dem Sex gerne über \underl nach.}%
-\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
+\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt. Sie sagten, wir könnten nicht \underl in \underl stecken. Sie lagen falsch.}%
 
 \blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}%
