--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -23,17 +23,17 @@
 \whitecard{FSK 18}{Anal-Sex.}%
 \whitecard{FSK 18}{Analkette.}%
 
-\whitecard{FSK 18}{Deutsche \newline Sado-Maso-\newline Pornos.}%
-\whitecard{FSK 18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
+\whitecard{FSK 18}{Deutsche  Sado-Maso- Pornos.}%
+\whitecard{FSK 18}{Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer quiekenden Sau.}%
 \whitecard{FSK 18}{Fingern.}%
 
 \whitecard{FSK 18}{Gloryholes.}%
 \whitecard{FSK 18}{Ihr den Arsch abwischen.}%
-\whitecard{FSK 18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
+\whitecard{FSK 18}{In einen Pool voller Kindertränen wichsen.}%
 
 \whitecard{FSK 18}{Inzest.}%
 \whitecard{FSK 18}{Natursekt.}%
-\whitecard{FSK 18}{Oralsex nicht\newline erwiedern.}%
+\whitecard{FSK 18}{Oralsex nicht erwiedern.}%
 
 \whitecard{FSK 18}{Sex mit Patrick Steward.}%
 \whitecard{FSK 18}{Sich ein Einweckglas in den Anus einführen.}%
@@ -41,11 +41,11 @@
 
 \whitecard{FSK 18}{Drei Schwänze auf einmal.}%
 \whitecard{FSK 18}{Ein Fleshlight.}%
-\whitecard{FSK 18}{Kein Sperma\newline mehr übrig\newline haben.}%
+\whitecard{FSK 18}{Kein Sperma mehr übrig haben.}%
 
-\whitecard{FSK 18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
+\whitecard{FSK 18}{Meine Sammlung an High-Tech-Sex-Spielzeugen.}%
 \whitecard{FSK 18}{Tentakel Pornos.}%
 \whitecard{FSK 18}{Ein schlechter Handjob.}%
 
 \whitecard{FSK 18}{Pacman, unkontrollierbar am Sperma-Schlucken.}%
-\blackcard{1}{FSK 18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
+\blackcard{1}{FSK 18}{Fun Tip! Wenn dein Mann dich um einen Blowjob bittet, überrasche ihn stattdessen mit \underl.}%
