--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -23,21 +23,21 @@
 \whitecard{Geschichte}{Adolf Hitler.}%
 \whitecard{Geschichte}{Anders Breivik.}%
 
-\whitecard{Geschichte}{Historische\newline schwarze\newline Kollegen.}%
+\whitecard{Geschichte}{Historische schwarze Kollegen.}%
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
-\whitecard{Geschichte}{Hurricane\newline Katrina.}%
+\whitecard{Geschichte}{Hurricane Katrina.}%
 
 \whitecard{Geschichte}{Sklaverei.}%
 \whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}%
 \whitecard{Geschichte}{Wikinger.}%
 
-\whitecard{Geschichte}{Zeitreisen\newline Paradox.}%
+\whitecard{Geschichte}{Zeitreisen Paradox.}%
 \whitecard{Geschichte}{Der Urknall.}%
 \whitecard{Geschichte}{Katapulte.}%
 
 \whitecard{Geschichte}{Marcus Iunius Brutus.}%
-\whitecard{Geschichte}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}%
-\whitecard{Geschichte}{Der\newline Übermensch.}%
+\whitecard{Geschichte}{Beidseitige Bereitschaft zum nuklearen Gegenschlag.}%
+\whitecard{Geschichte}{Der Übermensch.}%
 
 \whitecard{Geschichte}{In Polen einmarschieren.}%
 \whitecard{Geschichte}{Gandhi.}%
