--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -20,7 +20,7 @@
 % avoid placing whitespace character that are not intended inside these files.
 %
 \titlecard{Politik}%
-\whitecard{Politik}{Ihre Majestät,\newline Königin\newline Elizabeth II.}%
+\whitecard{Politik}{Ihre Majestät, Königin Elizabeth II.}%
 \whitecard{Politik}{Angela Merkel.}%
 
 \whitecard{Politik}{Barack Obama.}%
@@ -43,13 +43,13 @@
 \whitecard{Politik}{Helmut Kohl.}%
 \whitecard{Politik}{Arbeitslose.}%
 
-\whitecard{Politik}{Der hart\newline arbeitende Türke.}%
+\whitecard{Politik}{Der hart arbeitende Türke.}%
 \whitecard{Politik}{Angela Merkels Oberarme.}%
 \whitecard{Politik}{Bayern.}%
 
 \whitecard{Politik}{Das Patriarchat.}%
-\whitecard{Politik}{Der Zorn des\newline Putins.}%
-\whitecard{Politik}{Beweise\newline vernichten.}%
+\whitecard{Politik}{Der Zorn des Putins.}%
+\whitecard{Politik}{Beweise vernichten.}%
 
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
