--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -23,8 +23,8 @@
 \whitecard{Religion}{72 Jungfrauen.}%
 \whitecard{Religion}{Den Antichrist gebären.}%
 
-\whitecard{Religion}{Das Blut von\newline Jesus Christus.}%
-\whitecard{Religion}{Das Jüngste\newline Gericht.}%
+\whitecard{Religion}{Das Blut von Jesus Christus.}%
+\whitecard{Religion}{Das Jüngste Gericht.}%
 \whitecard{Religion}{Der gesamte Chor eines Mormonen-Gotteshauses.}%
 
 \whitecard{Religion}{Der Papst.}%
