--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -25,13 +25,13 @@
 
 \whitecard{Werbung}{Bifi\SymbReg.}%
 \whitecard{Werbung}{Der Ahoi-Brause Mann.}%
-\whitecard{Werbung}{Der kalte,\newline erfrischende\newline Geschmack\newline einer Pepsi\SymbReg}%
+\whitecard{Werbung}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}%
 
 \whitecard{Werbung}{AXE\SymbReg Deo.}%
 \whitecard{Werbung}{Dibadibadu.}%
 \whitecard{Werbung}{Meister Proper Sauberkraft.}%
 
-\whitecard{Werbung}{Ronald\newline McDonald.}%
+\whitecard{Werbung}{Ronald McDonald.}%
 \whitecard{Werbung}{Dominos\SymbReg Oreo Dessert Pizza.}%
 \whitecard{Werbung}{The World of Warcraft.}%
 
@@ -44,8 +44,8 @@
 \blackcard{1}{Werbung}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
 
 \blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
-\blackcard{1}{Werbung}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-\blackcard{1}{Werbung}{\underl:\newline Gut bis zum letzten Tropfen.}%
+\blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}%
+\blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
 
 \blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
