--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -24,23 +24,23 @@
 \whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fussnägeln.}%
 
 \whitecard{Eklig}{Ein bisschen pinkeln.}%
-\whitecard{Eklig}{Durchfall.\newline Für immer.}%
-\whitecard{Eklig}{Ein Kind\newline festhalten und\newline es anfurzen.}%
+\whitecard{Eklig}{Durchfall. Für immer.}%
+\whitecard{Eklig}{Ein Kind festhalten und es anfurzen.}%
 
 \whitecard{Eklig}{Furzen und dann weglaufen.}%
-\whitecard{Eklig}{Sich\newline überfressen und dann abführen.}%
+\whitecard{Eklig}{Sich überfressen und dann abführen.}%
 \whitecard{Eklig}{Smegma.}%
 
-\whitecard{Eklig}{Ein endloser\newline Strom aus\newline Diarrhoe.}%
-\whitecard{Eklig}{Zwei\newline Kleinwüchsige,\newline die in einen\newline Eimer\newline scheissen.}%
+\whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}%
+\whitecard{Eklig}{Zwei Kleinwüchsige, die in einen Eimer scheissen.}%
 \whitecard{Eklig}{An Dünnschiss sterben.}%
 
-\whitecard{Eklig}{Thomas Gottschalks weicher,\newline verschrumpelter\newline Körper.}%
+\whitecard{Eklig}{Thomas Gottschalks weicher, verschrumpelter Körper.}%
 \whitecard{Eklig}{Vollgeschissene Windeln.}%
 \whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}%
 
-\whitecard{Eklig}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}%
+\whitecard{Eklig}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}%
 \whitecard{Eklig}{Ein Fotzenfurz.}%
-\whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}
+\whitecard{Eklig}{Ein Schwamm voller Katzenpisse.}
 \blackcard{2}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
 \blackcard{1}{Eklig}{Was lässt mich unkontrolliert furzen?}%
