--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -24,19 +24,19 @@
 \whitecard{Kultur}{Cards against Humanity.}%
 
 \whitecard{Kultur}{Darth Vader.}%
-\whitecard{Kultur}{Das\newline Krümel Monster.}%
+\whitecard{Kultur}{Das Krümel Monster.}%
 \whitecard{Kultur}{Die Macht.}%
 
-\whitecard{Kultur}{Eine M. Night\newline Shyamalan\newline Story-Wendung.}%
+\whitecard{Kultur}{Eine M. Night Shyamalan Story-Wendung.}%
 \whitecard{Kultur}{Ein Live-Studio Publikum.}%
-\whitecard{Kultur}{Ein\newline Amateurvideo\newline von Heidi Klum,\newline wie sie in eine\newline Dose Ravioli\newline heult.}%
+\whitecard{Kultur}{Ein Amateurvideo von Heidi Klum, wie sie in eine Dose Ravioli heult.}%
 
 \whitecard{Kultur}{Justin Bieber.}%
 \whitecard{Kultur}{Keanu Reeves.}%
 \whitecard{Kultur}{Lady Gaga.}%
 
 \whitecard{Kultur}{Michael Jackson.}%
-\whitecard{Kultur}{Michael \newline``Bully''\newline Herbig.}%
+\whitecard{Kultur}{Michael ``Bully'' Herbig.}%
 \whitecard{Kultur}{Miley Cyrus mit 55.}%
 
 \whitecard{Kultur}{Nickelback.}%
@@ -56,14 +56,14 @@
 \whitecard{Kultur}{Winnie Puh.}%
 
 \whitecard{Kultur}{Til Schweiger.}%
-\whitecard{Kultur}{Morgan\newline Freemans\newline Stimme.}%
+\whitecard{Kultur}{Morgan Freemans Stimme.}%
 \whitecard{Kultur}{Tom Cruise.}%
 
 \whitecard{Kultur}{Richterin Barbara Salesch.}%
 \whitecard{Kultur}{BATMAN!!!}%
 \whitecard{Kultur}{Das Flötensolo aus "My Heart Will Go On".}%
 
-\whitecard{Kultur}{Bastian\newline Pastewkas\newline Schauspiel-\newline karriere.}%
+\whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}%
 \blackcard{1}{Kultur}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
 
@@ -71,12 +71,12 @@
 \blackcard{2}{Kultur}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
 \blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
 
-\blackcard{1}{Kultur}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
-\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl\newline zusammenleben.}%
+\blackcard{1}{Kultur}{Gleich auf RTL: die Weltmeisterschaft der \underl.}%
+\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
 \blackcard{1}{Kultur}{Was hat Vin Diesel zum Mittag gegessen?}%
 
 \blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
-\blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
+\blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl, die Geschichte von \underl."}%
 \blackcard{1}{Kultur}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
 
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
