--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -336,7 +336,7 @@
 \blackcard{1}{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
 
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
-\blackcard{2}{Basis}{Schritt 1: \underl. Schritt 2: \underl. Schritt 3: Profit.}%
+\blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.\newline}%
 \blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
 
 \blackcard{1}{Basis}{\underl. High Five, Bro.}%
@@ -379,9 +379,8 @@
 \blackcard{1}{Basis}{Womit wirst du deinen Partner immer beeindrucken können?}%
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
 
-\blackcard{3}{Basis}{Schreibe einen Haiku: \underl  \underl  \underl}%
+\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl\newline  \underl\newline  \underl}%
 \blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
 
-\blackcard{1}{Basis}{\underl, davon kann man nicht nur einen haben!}%
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
