--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -55,7 +55,7 @@
 \whitecard{Böse}{Afrikanische Kinder.}%
 \whitecard{Böse}{Eine Windmühle voller Leichen.}%
 
-\whitecard{Böse}{Sich einen Dreck um die dritte Welt zu scheren.}%
+\whitecard{Böse}{Sich einen Dreck um die dritte Welt scheren.}%
 \whitecard{Böse}{Skalps von weißen Männern.}%
 \whitecard{Böse}{Verlust von Zivilisten.}%
 
@@ -68,5 +68,5 @@
 \blackcard{1}{Böse}{Wofür ist Krieg gut?}%
 
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden? \underl.}%
-\blackcard{1}{Böse}{Weiße Menschen wie \underl.}%
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?}%
+\blackcard{1}{Böse}{Menschen, die aussehen wie \underl.}%
