--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -68,15 +68,15 @@
 \blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
 
 \blackcard{1}{Kultur}{Bald zu sehen: \underl, das Musical.}%
-\blackcard{2}{Kultur}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
+\blackcard{2}{Kultur}{Das neue Superhelden-Duo: \underl und \underl.}%
 \blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
 
 \blackcard{1}{Kultur}{Gleich auf RTL: die Weltmeisterschaft der \underl.}%
-\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}%
+\blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars, die mit \underl zusammenleben.}%
 \blackcard{1}{Kultur}{Was hat Vin Diesel zum Mittag gegessen?}%
 
 \blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
 \blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl, die Geschichte von \underl."}%
-\blackcard{1}{Kultur}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
+\blackcard{2}{Kultur}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
 
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
