--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -49,3 +49,4 @@
 
 \blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
+\blackcard{1}{Werbung}{\underl, davon kann man nicht nur einen haben!}%
