--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -52,5 +52,5 @@
 \whitecard{Politik}{Beweise vernichten.}%
 
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
-\blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
+\blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}%
 \blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die französische Regierung die Erforschung von \underl.}%
