--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -41,12 +41,14 @@
 
 \whitecard{Werbung}{Whiskas.}%
 \whitecard{Werbung}{All-you-can-eat Shrimps für 4,99 Euro.}%
-\blackcard{1}{Werbung}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
+\whitecard{Werbung}{Das schwedische Tempur-Pedic\SymbReg\newline Schlafsystem.}%
 
+\blackcard{1}{Werbung}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
 \blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
 \blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}%
-\blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
 
+\blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
 \blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
+
 \blackcard{1}{Werbung}{\underl, davon kann man nicht nur einen haben!}%
